fix filter link overflow

--- a/plugins/theme-default/static/default.css
+++ b/plugins/theme-default/static/default.css
@@ -213,7 +213,7 @@ svg .axis, svg .tick, svg .grid, svg rect {
 .filter-links {
     height: 30px;
     overflow-x: hidden;
-    overflow-y: visible;
+    overflow-y: hidden;
     border-bottom: 1px solid #ccc;
 }
 
